--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change22 </title>
+    <title> Artist 1 change23 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -110,8 +110,8 @@
         var h = document.createElement("div");
         h.className = "popReview";
         var reviews = document.getElementById("reviews");
-        /*reviews.insertBefore(h, reviews.childNodes[0]);*/
-        document.reviews.appendChild(h);
+        reviews.insertBefore(h, reviews.childNodes[0]);
+        /*document.reviews.appendChild(h);*/
       }
     </script>
   </body>
