--- a/artist1.html
+++ b/artist1.html
@@ -105,13 +105,12 @@
         alert("Hello " + subj + "! Your form was successfully submitted!" + document.getElementById("review").value);
       }
       function newReview() {
-        var subj = document.forms[0].subj.value;
+        /*var subj = document.forms[0].subj.value;
         var review = document.getElementById("review").value;
         var h = document.createElement("div");
         h.className = "popReview";
         var reviews = document.getElementById("reviews");
-        reviews.insertBefore(h, reviews.childNodes[0]);
-        /*document.reviews.appendChild(h);*/
+        reviews.insertBefore(h, reviews.childNodes[0]);*/
       }
     </script>
   </body>
