--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change24 </title>
+    <title> Artist 1 change25 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -111,8 +111,8 @@
         var h = document.createElement("div");
         h.className = "popReview";
         
-        var h3 = document.createElement("div");
-        h3.className = "h3";
+        /*var h3 = document.createElement("div");
+        h3.className = "h3";*/
         var text = document.createTextNode(subj);
         h.appendChild(text);
         
