--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change28 </title>
+    <title> Artist 1 change29 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -123,7 +123,7 @@
         h.appendChild(p);
         
         var reviews = document.getElementById("reviews");
-        reviews.insertAfter(h, reviews.childNodes[-1]);
+        reviews.insertBefore(h, reviews.childNodes[1]);
       }
       function insertAfter(newNode, existingNode) {
       existingNode.parentNode.insertBefore(newNode, existingNode.nextSibling);
