--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change32 </title>
+    <title> Artist 1 change33 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -123,7 +123,8 @@
         h.appendChild(p);
         
         var reviews = document.getElementById("reviews");
-        reviews.insertAfter(reviews.childNodes[0], h);
+        //reviews.insertBefore(h, reviews.childNodes[0]);
+        reviews.childNodes[0].parentNode.insertBefore(h, reviews.childNodes[0]);
       }
       function insertAfter(referenceNode, newNode) {
         referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
