--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change34 </title>
+    <title> Artist 1 change35 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -123,8 +123,8 @@
         h.appendChild(p);
         
         var reviews = document.getElementById("reviews");
-        //reviews.insertBefore(h, reviews.childNodes[0]);
-        reviews.childNodes[0].parentNode.insertBefore(h, reviews.childNodes[0].nextSibling);
+        reviews.insertBefore(h, reviews.childNodes[-1]);
+        //reviews.childNodes[0].parentNode.insertBefore(h, reviews.childNodes[0].nextSibling);
       }
       function insertAfter(referenceNode, newNode) {
         referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
