--- a/artist1.html
+++ b/artist1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <title> Artist 1 change36 </title>
+    <title> Artist 1 change37 </title>
     <link rel = "stylesheet" href = "style.css">
   </head>
   
@@ -77,7 +77,7 @@
     </div>
     <div class="clear"></div>
     
-    <form onsubmit = "newReview()" action = "#">
+    <form action = "#" onsubmit = "newReview()">
       Review subject: <input id = "subj" type="text">
       <br>
       <span> Write your review! </span>
